# ezffi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/ezffi/: Cargo.toml  build.rs  cbindgen.toml  ezffi.toml
crates/ezffi-macros/: Cargo.toml
crates/ezffi-macros/src/: config.rs  enums.rs  functions.rs  lib.rs  namer.rs  structs.rs  type_resolver.rs
crates/ezffi/src/: async_rt.rs  lib.rs
crates/ezffi/src/std_impls/: mod.rs  primitives.rs  rc.rs  string.rs  vec.rs
crates/ezffi/tests/: functions.rs  generic.rs  impls.rs  rc.rs  structs.rs  vec.rs
crates/ffi-c-tests/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  ezffi.toml  test.sh
crates/ffi-c-tests/c-tests/: arithmetics.c  async_fns.c  c_enum.c  car_lifecycle.c  enum.c  functions.c  generics.c  string.c  structs.c  vec.c
crates/ffi-c-tests/ezffi/: ezffi.h
crates/ffi-c-tests/ffi-c-tests/: ffi-c-tests.h
crates/ffi-c-tests/src/: arithmetics.rs  async_fns.rs  car.rs  enums.rs  funcions.rs  generics.rs  lib.rs  string.rs  structs.rs  vec.rs
crates/ffi-c-tests/test.bin.dSYM/Contents/Resources/Relocations/aarch64/: test.bin.yml
crates/test-lib/: Cargo.toml
crates/test-lib/src/: lib.rs
