[package]
name = "ezffi-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106" }

toml = { version = "1.0.7" }
serde = { version = "1.0.228", features = ["derive"] }

[features]
generics = []
async = []
