[package]
name = "ezffi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

description = "Proc-macros backing the ezffi crate"
keywords = ["ffi", "macro", "proc-macro", "cbindgen", "interop"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/ezffi-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106" }

toml = { version = "1.0.7" }
serde = { version = "1.0.228", features = ["derive"] }

[features]
generics = []
async = []
