[package]
name = "ezffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

description = "Generate C-FFI bindings from Rust types/functions via a single proc-macro attribute"
keywords = ["ffi", "c", "bindings", "interop", "cbindgen"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
documentation = "https://docs.rs/ezffi"

[dependencies]
ezffi-macros = { path = "../ezffi-macros" }
pollster = { version = "0.4", optional = true }

[features]
default = []
generics = ["ezffi-macros/generics"]
async = ["dep:pollster", "ezffi-macros/async"]

[build-dependencies]
cbindgen = { version = "0.29.2" }
