[package]
name = "ffi-c-tests"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
ezffi = { path = "../ezffi", features = ["generics", "async"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
cbindgen = { version = "0.29.2" }