[package]
name = "ffi-c-tests"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
ezffi = { path = "../ezffi", features = ["generics", "async"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
cbindgen = { version = "0.29.2" }